SLING-9161 - The Scripting Bundle Maven Plugin should allow more flexible ways for the project structure
* no need yet for Java 11 language features